--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     successful influencer marketing campaigns at scale.
 
                 </p>
-                <button class="button-modify">Preebook now </button>
+                <button class="button-modify">Preebook now <i class="fas fa-long-arrow-alt-right"></i></button>
 
 
             </div>
@@ -69,16 +69,273 @@
                     </div>
                     <div class="products-details">
                         <h3 class="products-name">Airbuds</h3>
-                        <p>$100.0</p>
+                        <p>$100.00</p>
                         <div class="products-info">
                             <div>
-                                <i class="fal fa-star"></i>
-                                <i class="fal fa-star"></i>
-                                <i class="fal fa-star"></i>
-                                <i class="fal fa-star"></i>
-                                <i class="fal fa-star"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star empthy"></i>
+                                <span>4.5</span>
                             </div>
+
+
                         </div>
+                        <div class="history">
+                            <p>Wordwide shifting
+                                available</p>
+                            <p>Buyers protection possible!</p>
+                        </div>
+
+
+
+                    </div>
+                </div>
+            </div>
+            <div class="collections">
+                <div class="collection">
+                    <div class="collection-products">
+                        <img src="images/airpod.png" alt="">
+                    </div>
+                    <div class="products-details">
+                        <h3 class="products-name">Airbuds</h3>
+                        <p>$100.00</p>
+                        <div class="products-info">
+                            <div>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star empthy"></i>
+                                <span>4.5</span>
+                            </div>
+
+
+                        </div>
+                        <div class="history">
+                            <p>Wordwide shifting
+                                available</p>
+                            <p>Buyers protection possible!</p>
+                        </div>
+
+
+
+                    </div>
+                </div>
+            </div>
+            <div class="collections">
+                <div class="collection">
+                    <div class="collection-products">
+                        <img src="images/airpod.png" alt="">
+                    </div>
+                    <div class="products-details">
+                        <h3 class="products-name">Airbuds</h3>
+                        <p>$100.00</p>
+                        <div class="products-info">
+                            <div>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star empthy"></i>
+                                <span>4.5</span>
+                            </div>
+
+
+                        </div>
+                        <div class="history">
+                            <p>Wordwide shifting
+                                available</p>
+                            <p>Buyers protection possible!</p>
+                        </div>
+
+
+
+                    </div>
+                </div>
+            </div>
+            <div class="collections">
+                <div class="collection">
+                    <div class="collection-products">
+                        <img src="images/airpod.png" alt="">
+                    </div>
+                    <div class="products-details">
+                        <h3 class="products-name">Airbuds</h3>
+                        <p>$100.00</p>
+                        <div class="products-info">
+                            <div>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star empthy"></i>
+                                <span>4.5</span>
+                            </div>
+
+
+                        </div>
+                        <div class="history">
+                            <p>Wordwide shifting
+                                available</p>
+                            <p>Buyers protection possible!</p>
+                        </div>
+
+
+
+                    </div>
+                </div>
+            </div>
+            <div class="collections">
+                <div class="collection">
+                    <div class="collection-products">
+                        <img src="images/airpod.png" alt="">
+                    </div>
+                    <div class="products-details">
+                        <h3 class="products-name">Airbuds</h3>
+                        <p>$100.00</p>
+                        <div class="products-info">
+                            <div>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star empthy"></i>
+                                <span>4.5</span>
+                            </div>
+
+
+                        </div>
+                        <div class="history">
+                            <p>Wordwide shifting
+                                available</p>
+                            <p>Buyers protection possible!</p>
+                        </div>
+
+
+
+                    </div>
+                </div>
+            </div>
+            <div class="collections">
+                <div class="collection">
+                    <div class="collection-products">
+                        <img src="images/airpod.png" alt="">
+                    </div>
+                    <div class="products-details">
+                        <h3 class="products-name">Airbuds</h3>
+                        <p>$100.00</p>
+                        <div class="products-info">
+                            <div>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star empthy"></i>
+                                <span>4.5</span>
+                            </div>
+
+
+                        </div>
+                        <div class="history">
+                            <p>Wordwide shifting
+                                available</p>
+                            <p>Buyers protection possible!</p>
+                        </div>
+
+
+
+                    </div>
+                </div>
+            </div>
+            <div class="collections">
+                <div class="collection">
+                    <div class="collection-products">
+                        <img src="images/airpod.png" alt="">
+                    </div>
+                    <div class="products-details">
+                        <h3 class="products-name">Airbuds</h3>
+                        <p>$100.00</p>
+                        <div class="products-info">
+                            <div>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star empthy"></i>
+                                <span>4.5</span>
+                            </div>
+
+
+                        </div>
+                        <div class="history">
+                            <p>Wordwide shifting
+                                available</p>
+                            <p>Buyers protection possible!</p>
+                        </div>
+
+
+
+                    </div>
+                </div>
+            </div>
+            <div class="collections">
+                <div class="collection">
+                    <div class="collection-products">
+                        <img src="images/airpod.png" alt="">
+                    </div>
+                    <div class="products-details">
+                        <h3 class="products-name">Airbuds</h3>
+                        <p>$100.00</p>
+                        <div class="products-info">
+                            <div>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star empthy"></i>
+                                <span>4.5</span>
+                            </div>
+
+
+                        </div>
+                        <div class="history">
+                            <p>Wordwide shifting
+                                available</p>
+                            <p>Buyers protection possible!</p>
+                        </div>
+
+
+
+                    </div>
+                </div>
+            </div>
+            <div class="collections">
+                <div class="collection">
+                    <div class="collection-products">
+                        <img src="images/airpod.png" alt="">
+                    </div>
+                    <div class="products-details">
+                        <h3 class="products-name">Airbuds</h3>
+                        <p>$100.00</p>
+                        <div class="products-info">
+                            <div>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star empthy"></i>
+                                <span>4.5</span>
+                            </div>
+
+
+                        </div>
+                        <div class="history">
+                            <p>Wordwide shifting
+                                available</p>
+                            <p>Buyers protection possible!</p>
+                        </div>
+
 
 
                     </div>
