--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
                     <li><a href="">Home</a></li>
                     <li><a href="">Products</a></li>
                     <li><a href="">Sign up</a></li>
-                    <li><a href="">Log in</a></li>
+                    <li><a href="">Log in <i id="font" class="fas fa-search"></i><span class="font-01"><i
+                                    class="fas fa-truck"></i></span></a></li>
+
                 </ul>
+
             </nav>
         </section>
 
@@ -83,24 +86,45 @@
 
                         </div>
                         <div class="history">
-                            <p>Wordwide shifting
-                                available</p>
-                            <p>Buyers protection possible!</p>
+                            <p>Wordwide shifting available Buyers protection possible!</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="collection">
+                    <div class="collection-products">
+                        <img src="images/tripod.png" alt="">
+                    </div>
+                    <div class="products-details">
+                        <h3 class="products-name">Flex Tripod</h3>
+                        <p>$50.48</p>
+                        <div class="products-info">
+                            <div>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star empthy"></i>
+                                <span>4.5</span>
+                            </div>
+                        </div>
+                        <div class="history">
+                            <p>Wordwide shifting available Buyers protection possible!</p>
+
                         </div>
 
 
 
                     </div>
                 </div>
-            </div>
-            <div class="collections">
+
                 <div class="collection">
                     <div class="collection-products">
-                        <img src="images/airpod.png" alt="">
+                        <img src="images/mic.png" alt="">
                     </div>
                     <div class="products-details">
                         <h3 class="products-name">Airbuds</h3>
-                        <p>$100.00</p>
+                        <p>$120.25</p>
                         <div class="products-info">
                             <div>
                                 <i class="far fa-star filled"></i>
@@ -114,24 +138,63 @@
 
                         </div>
                         <div class="history">
-                            <p>Wordwide shifting
-                                available</p>
-                            <p>Buyers protection possible!</p>
+                            <p>Wordwide shifting available Buyers protection possible!</p>
                         </div>
-
-
-
                     </div>
                 </div>
-            </div>
-            <div class="collections">
                 <div class="collection">
                     <div class="collection-products">
-                        <img src="images/airpod.png" alt="">
+                        <img src="images/drone.png" alt="">
                     </div>
                     <div class="products-details">
-                        <h3 class="products-name">Airbuds</h3>
-                        <p>$100.00</p>
+                        <h3 class="products-name">Drone</h3>
+                        <p>$980.85</p>
+                        <div class="products-info">
+                            <div>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star empthy"></i>
+                                <span>4.5</span>
+                            </div>
+                        </div>
+                        <div class="history">
+                            <p>Wordwide shifting available Buyers protection possible!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="collection">
+                    <div class="collection-products">
+                        <img src="images/lights.png" alt="">
+                    </div>
+                    <div class="products-details">
+                        <h3 class="products-name">Light Setup</h3>
+                        <p>$1200.00</p>
+                        <div class="products-info">
+                            <div>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star empthy"></i>
+                                <span>4.5</span>
+                            </div>
+                        </div>
+                        <div class="history">
+                            <p>Wordwide shifting available Buyers protection possible!</p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="collection">
+                    <div class="collection-products">
+                        <img src="images/setup.png" alt="">
+                    </div>
+                    <div class="products-details">
+                        <h3 class="products-name">Photoshoot set</h3>
+                        <p>$820.00</p>
                         <div class="products-info">
                             <div>
                                 <i class="far fa-star filled"></i>
@@ -145,24 +208,17 @@
 
                         </div>
                         <div class="history">
-                            <p>Wordwide shifting
-                                available</p>
-                            <p>Buyers protection possible!</p>
+                            <p>Wordwide shifting available Buyers protection possible!</p>
                         </div>
-
-
-
                     </div>
                 </div>
-            </div>
-            <div class="collections">
                 <div class="collection">
                     <div class="collection-products">
-                        <img src="images/airpod.png" alt="">
+                        <img src="images/camera.png" alt="">
                     </div>
                     <div class="products-details">
-                        <h3 class="products-name">Airbuds</h3>
-                        <p>$100.00</p>
+                        <h3 class="products-name">Vlogging Camera</h3>
+                        <p>$1800.00</p>
                         <div class="products-info">
                             <div>
                                 <i class="far fa-star filled"></i>
@@ -176,24 +232,39 @@
 
                         </div>
                         <div class="history">
-                            <p>Wordwide shifting
-                                available</p>
-                            <p>Buyers protection possible!</p>
+                            <p>Wordwide shifting available Buyers protection possible!</p>
                         </div>
-
-
-
                     </div>
                 </div>
-            </div>
-            <div class="collections">
                 <div class="collection">
                     <div class="collection-products">
-                        <img src="images/airpod.png" alt="">
+                        <img src="images/single-light.png" alt="">
                     </div>
                     <div class="products-details">
-                        <h3 class="products-name">Airbuds</h3>
-                        <p>$100.00</p>
+                        <h3 class="products-name">Green Screen</h3>
+                        <p>$25.85</p>
+                        <div class="products-info">
+                            <div>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star filled"></i>
+                                <i class="far fa-star empthy"></i>
+                                <span>4.5</span>
+                            </div>
+                        </div>
+                        <div class="history">
+                            <p>Wordwide shifting available Buyers protection possible!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="collection">
+                    <div class="collection-products">
+                        <img src="images/action.png" alt="">
+                    </div>
+                    <div class="products-details">
+                        <h3 class="products-name">Action Camera</h3>
+                        <p>$380.00</p>
                         <div class="products-info">
                             <div>
                                 <i class="far fa-star filled"></i>
@@ -207,141 +278,15 @@
 
                         </div>
                         <div class="history">
-                            <p>Wordwide shifting
-                                available</p>
-                            <p>Buyers protection possible!</p>
+                            <p>Wordwide shifting available Buyers protection possible!</p>
                         </div>
-
-
-
                     </div>
                 </div>
             </div>
-            <div class="collections">
-                <div class="collection">
-                    <div class="collection-products">
-                        <img src="images/airpod.png" alt="">
-                    </div>
-                    <div class="products-details">
-                        <h3 class="products-name">Airbuds</h3>
-                        <p>$100.00</p>
-                        <div class="products-info">
-                            <div>
-                                <i class="far fa-star filled"></i>
-                                <i class="far fa-star filled"></i>
-                                <i class="far fa-star filled"></i>
-                                <i class="far fa-star filled"></i>
-                                <i class="far fa-star empthy"></i>
-                                <span>4.5</span>
-                            </div>
-
-
-                        </div>
-                        <div class="history">
-                            <p>Wordwide shifting
-                                available</p>
-                            <p>Buyers protection possible!</p>
-                        </div>
-
-
-
-                    </div>
-                </div>
+            <div class="page">
+                <p>See More <i class="fas fa-long-arrow-alt-right"></i></p>
             </div>
-            <div class="collections">
-                <div class="collection">
-                    <div class="collection-products">
-                        <img src="images/airpod.png" alt="">
-                    </div>
-                    <div class="products-details">
-                        <h3 class="products-name">Airbuds</h3>
-                        <p>$100.00</p>
-                        <div class="products-info">
-                            <div>
-                                <i class="far fa-star filled"></i>
-                                <i class="far fa-star filled"></i>
-                                <i class="far fa-star filled"></i>
-                                <i class="far fa-star filled"></i>
-                                <i class="far fa-star empthy"></i>
-                                <span>4.5</span>
-                            </div>
 
-
-                        </div>
-                        <div class="history">
-                            <p>Wordwide shifting
-                                available</p>
-                            <p>Buyers protection possible!</p>
-                        </div>
-
-
-
-                    </div>
-                </div>
-            </div>
-            <div class="collections">
-                <div class="collection">
-                    <div class="collection-products">
-                        <img src="images/airpod.png" alt="">
-                    </div>
-                    <div class="products-details">
-                        <h3 class="products-name">Airbuds</h3>
-                        <p>$100.00</p>
-                        <div class="products-info">
-                            <div>
-                                <i class="far fa-star filled"></i>
-                                <i class="far fa-star filled"></i>
-                                <i class="far fa-star filled"></i>
-                                <i class="far fa-star filled"></i>
-                                <i class="far fa-star empthy"></i>
-                                <span>4.5</span>
-                            </div>
-
-
-                        </div>
-                        <div class="history">
-                            <p>Wordwide shifting
-                                available</p>
-                            <p>Buyers protection possible!</p>
-                        </div>
-
-
-
-                    </div>
-                </div>
-            </div>
-            <div class="collections">
-                <div class="collection">
-                    <div class="collection-products">
-                        <img src="images/airpod.png" alt="">
-                    </div>
-                    <div class="products-details">
-                        <h3 class="products-name">Airbuds</h3>
-                        <p>$100.00</p>
-                        <div class="products-info">
-                            <div>
-                                <i class="far fa-star filled"></i>
-                                <i class="far fa-star filled"></i>
-                                <i class="far fa-star filled"></i>
-                                <i class="far fa-star filled"></i>
-                                <i class="far fa-star empthy"></i>
-                                <span>4.5</span>
-                            </div>
-
-
-                        </div>
-                        <div class="history">
-                            <p>Wordwide shifting
-                                available</p>
-                            <p>Buyers protection possible!</p>
-                        </div>
-
-
-
-                    </div>
-                </div>
-            </div>
-            </div>
 
         </section>
     </header>
